Datos/Envios/256/compilacion.txt
../Datos/Envios/256/AInfinito.java:20: error: unreachable statement
            t--; 
            ^
1 error
